[gd_scene load_steps=6 format=3 uid="uid://dwvxi5mqbiujd"]

[ext_resource type="Script" path="res://MainScripts/LoteEdition.gd" id="1_u0q8k"]
[ext_resource type="Script" path="res://MainScripts/Grid.gd" id="2_jayqm"]
[ext_resource type="Script" path="res://MainScripts/Camera.gd" id="3_da6jb"]
[ext_resource type="Script" path="res://LoteForm.gd" id="4_ky7rv"]
[ext_resource type="Script" path="res://MainScripts/HTTP_TEST.gd" id="4_ty05l"]

[node name="LoteEdition" type="Node2D"]
script = ExtResource("1_u0q8k")

[node name="Grid" type="Node2D" parent="."]
top_level = true
z_index = 1
position = Vector2(357, 84)
script = ExtResource("2_jayqm")
height = 20

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(2.08165e-12, 2.08165e-12)
anchor_mode = 0
script = ExtResource("3_da6jb")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
offset = Vector2(2.08165e-12, 2.08165e-12)
transform = Transform2D(1, 0, 0, 1, 2.08165e-12, 2.08165e-12)

[node name="LoteForm" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_ky7rv")

[node name="HBoxContainer" type="VBoxContainer" parent="CanvasLayer/LoteForm"]
layout_mode = 0
offset_left = 24.0
offset_top = 212.0
offset_right = 173.0
offset_bottom = 348.0
scale = Vector2(2, 2)

[node name="CrearLote" type="Button" parent="CanvasLayer/LoteForm/HBoxContainer"]
layout_mode = 2
text = "Nuevo Lote"

[node name="Nombre" type="LineEdit" parent="CanvasLayer/LoteForm/HBoxContainer"]
layout_mode = 2
placeholder_text = "Nombre"
editable = false

[node name="Area" type="LineEdit" parent="CanvasLayer/LoteForm/HBoxContainer"]
layout_mode = 2
placeholder_text = "Area"
editable = false

[node name="VBoxContainer" type="HBoxContainer" parent="CanvasLayer/LoteForm/HBoxContainer"]
layout_mode = 2

[node name="Cancelar" type="Button" parent="CanvasLayer/LoteForm/HBoxContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Cancelar"

[node name="Aceptar" type="Button" parent="CanvasLayer/LoteForm/HBoxContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Aceptar"

[node name="Previsualizar" type="Button" parent="CanvasLayer/LoteForm/HBoxContainer"]
layout_mode = 2
text = "Previsualizar"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="HTPP_TEST" type="Button" parent="."]
visible = false
offset_left = 33.0
offset_top = 37.0
offset_right = 138.0
offset_bottom = 68.0
text = "Lote"
script = ExtResource("4_ty05l")

[connection signal="pressed" from="CanvasLayer/LoteForm/HBoxContainer/CrearLote" to="Grid" method="_on_crear_lote_pressed"]
[connection signal="pressed" from="CanvasLayer/LoteForm/HBoxContainer/CrearLote" to="CanvasLayer/LoteForm" method="_on_crear_lote_pressed"]
[connection signal="pressed" from="CanvasLayer/LoteForm/HBoxContainer/VBoxContainer/Cancelar" to="CanvasLayer/LoteForm" method="_on_cancelar_pressed"]
[connection signal="pressed" from="CanvasLayer/LoteForm/HBoxContainer/VBoxContainer/Aceptar" to="Grid" method="_on_aceptar_pressed"]
[connection signal="pressed" from="CanvasLayer/LoteForm/HBoxContainer/VBoxContainer/Aceptar" to="CanvasLayer/LoteForm" method="_on_aceptar_pressed"]
[connection signal="pressed" from="CanvasLayer/LoteForm/HBoxContainer/Previsualizar" to="Grid" method="_on_previsualizar_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="HTPP_TEST" method="_on_request_completed"]
